@@ -4,6 +4,10 @@
  - feat: contact point estimation methods now return detailed
    information about the procedure (currently plottable data to
    understand the process)
+ - fix: spatial smoothing not working in some cases (#15)
+ - ref: remove "...smoothed" column data (which was never used anyway);
+   instead, apply smoothing directly to AFMData subclass
+ - setup: bump afmformats from 0.16.0 to 0.16.3
 3.0.0
  - BREAKING CHANGE: The contact point estimation method "scheme_2020"
    has been removed, although it has been the default for some time.
